# biom

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: CI.yaml
nursery/REAT/: eisland.py  site.py
nursery/coordmap/: __init__.py
nursery/coverage/: __init__.py
nursery/nn/models/: ResNet.py  __init__.py
nursery/ripper/: run.py
nursery/ripper/core/: io.py  scaling.py  utils.py
nursery/ripper/core/fragments/: BAMPEReader.py  seqblocks.py
nursery/ripper/core/functors/: callpeaks.py  foldenrichment.py  pvalues.py  qvalues.py  result.py
nursery/ripper/core/pileup/: io.py  merge.py  pileup.py
nursery/ripper/core/pipeline/: pileup.py  pipeline.py  postprocess.py
python/biom/: __init__.py
python/biom/analysis/bioproj/: __init__.py  library.py  sample.py
python/biom/analysis/nfcore/fetchngs/: load_bioproj.py
python/biom/analysis/nfcore/rnaseq/: descriptor.py  design.py  experiment.py  project.py
python/biom/analysis/rcount/: __init__.py  resolve.py  test_resolution.py
python/biom/analysis/rcount/counter/: joblib_counter.py  partition.py  reads_counter.py
python/biom/analysis/rcount/source/: adapters.py  bam.py  source.py
python/biom/core/: orientation.py  strand.py  strdeductor.py  test_orientation.py  test_range.py  test_strdeductor.py
python/biom/db/repmasker/: test_repmasker.py
python/biom/ds/gindex/: genomic_index.py  overlap.py  test_index.py  test_overlap.py
python/biom/io/: __init__.py
rust/: Cargo.toml
rust/src/: lib.rs
src/biom/: __init__.py  paths.py  range.py
src/biom/REAT/: __init__.py  eisland.py  misc.py  roi.py  site.py
src/biom/algo/: __init__.py  misc.py
src/biom/analysis/DU/: __init__.py  counting.py  data_collection.py  group.py
src/biom/analysis/annotation/: annotator.py  resolve.py  source.py  test_resolution.py
src/biom/analysis/counting/: __init__.py  counter.py  resolve.py  source.py
src/biom/analysis/nfcore/: __init__.py
src/biom/analysis/rcount/: __init__.py  bam.py  read_counter.py
src/biom/annot/ensembl/: abc.py  assembly.py
src/biom/annot/repmasker/: test_repmasker.py
src/biom/annotate/: __init__.py  annotate.py  index.py
src/biom/annotation/: __init__.py  annotator.py  resolution.py  resolve.py  source.py  test_resolution.py
src/biom/bioproj/: experiment.py  library.py  project.py  sample.py  seqrun.py
src/biom/bioproj/adapter/: __init__.py  test_adapters.py  yaml.py
src/biom/common/: __init__.py  range.py  strand.py  strdeductor.py  test_range.py  test_strand.py  test_strdeductor.py
src/biom/coordmap/: __init__.py
src/biom/db/: __init__.py
src/biom/db/ensembl/: biomart.py
src/biom/ds/: __init__.py
src/biom/ds/gindex/: __init__.py  genomic_counter.py  genomic_index.py  index.py  overlap.py  resolve.py  test_index.py  test_overlap.py  test_resolution.py
src/biom/ensembl/: __init__.py  assembly.py  biomart.py  common.py  fetch.py  loader.py
src/biom/ensembl/data/: __init__.py  contigs.py  genes.py  transcripts.py
src/biom/ensembl/gene/: __init__.py  attributes.py  descriptor.py
src/biom/ensembl/transcript/: __init__.py  attributes.py  descriptor.py
src/biom/gindex/: __init__.py  annotate.py  index.py  overlap.py  test_index.py  test_overlap.py
src/biom/io/: __init__.py  bam.py
src/biom/nfcore/fetchngs/: __init__.py  load_bioproj.py
src/biom/nfcore/rnaseq/: descriptor.py  design.py  experiment.py  project.py
src/biom/nn/: datasource.py  losses.py  misc.py
src/biom/nn/models/: UNet.py
src/biom/primitives/: __init__.py  direction.py  interval.py  orientation.py  range.py  strand.py  strdeductor.py  test_orientation.py  test_range.py  test_strand.py  test_strdeductor.py
src/biom/primitives/bioproj/: library.py  project.py  seqrun.py
src/biom/repmasker/: __init__.py  repmasker.py  test_repmasker.py
src/biom/ripper/: BundledBAMReader.py  __init__.py  cluster.py  utils.py
src/biom/ripper/core/: __init__.py
src/biom/ripper/pcalling/: __init__.py  run.py
src/biom/sam/: __init__.py  strdeductor.py
src/biom/zhunt/: __init__.py  zhunt.py  zhunt3-alan  zhunt3-optimized
tests/: test_bampereader.py  test_gindex.py
(+51 files in other folders)
