[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["test_*.py"]

[project]
name = "biom"
version = "0.0.16"
authors = [
    { name = "Aleksandr Fedorov", email = "aleksandr.fedorov@imm.ox.ac.uk" },
]
description = "Modules for biological data analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs >= 23.2.0, < 24",
    "cattrs[pyyaml] >= 23.2.3, < 24",
    "pysam >= 0.21.0, < 1",
    "intervaltree >= 3.1.0, < 4",
    "pybedtools >= 0.9.1, < 1",
    "sortedcontainers >= 2.4.0, < 3",
    "pandas >= 2.0.0, < 3"
]

[project.urls]
"Homepage" = "https://github.com/alnfedorov/biom"
"Bug Tracker" = "https://github.com/alnfedorov/biom/issues"

[tool.mypy]
exclude = ['biom/gindex', 'biom/annotation']
follow_imports = "silent"
