[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["test_*.py"]

[project]
name = "biom"
version = "0.0.17"
authors = [
    { name = "Aleksandr Fedorov", email = "aleksandr.fedorov@imm.ox.ac.uk" },
]
description = "Modules for biological data analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs >= 23.2.0, < 24",
    "cattrs[pyyaml] >= 23.2.3, < 24",
    "pysam >= 0.21.0, < 1",
    "intervaltree >= 3.1.0, < 4",
    "pybedtools >= 0.9.1, < 1",
    "sortedcontainers >= 2.4.0, < 3",
    "pandas >= 2.0.0, < 3"
]
[project.optional-dependencies]
dev = [
    "sortedcontainers-stubs >= 2.4.2, < 2.4.3",
    "pandas-stubs >= 2.1.4, < 2.1.5",
    "mypy >= 1.9.0, < 2.0.0",
    "pytest >= 8.1.1, < 8.1.2",
    "ruff >= 0.3.5, < 0.3.6"
]

[project.urls]
"Homepage" = "https://github.com/alnfedorov/biom"
"Bug Tracker" = "https://github.com/alnfedorov/biom/issues"

[tool.mypy]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "pybedtools,intervaltree,joblib"
ignore_missing_imports = true
