[project]
name = "biom"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description", "license", "authors", "readme", "repository"]
dependencies = [
    "attrs >= 23.2.0, < 24",
    "cattrs[pyyaml] >= 23.2.3, < 24",
    "pysam >= 0.21.0, < 1",
    "intervaltree >= 3.1.0, < 4",
    "pybedtools >= 0.9.1, < 1",
    "sortedcontainers >= 2.4.0, < 3",
    "pandas >= 2.0.0, < 3",
    "joblib >= 1.2.0, < 2",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
#compatibility = "manylinux2014"
profile = "release"
python-source = "python"
module-name = "biom._rs"

[project.optional-dependencies]
dev = [
    "sortedcontainers-stubs >= 2.4.2, < 2.4.3",
    "pandas-stubs >= 2.1.4, < 2.1.5",
    "mypy >= 1.9.0, < 2.0.0",
    "pytest >= 8.1.1, < 8.1.2",
    "ruff >= 0.3.5, < 0.3.6"
]

[tool.mypy]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "pybedtools,intervaltree,joblib"
ignore_missing_imports = true
