[package]
name = "biom_rs"
version = "0.0.1"
authors = ["Aleksandr Fedorov"]
edition = "2021"
description = "Rust-powered Python library for biological data analysis"
readme = "../README.md"
repository = "https://github.com/terabio/biom"
license = "MIT"
license-file = "../LICENSE"
exclude = ["test_*.py"]

[lib]
name = "biom"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["eyre"] }
itertools = "0.12.1"
eyre = "0.6.12"
